--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,16 @@ p {
         padding: 10px 18px; /* Iets kleinere padding voor kleine schermen */
     }
 }
+
+.home-icon {
+    position: fixed;
+    top: 10px; /* Afstand van de bovenkant van het scherm */
+    right: 10px; /* Afstand van de rechterkant van het scherm */
+    font-size: 24px; /* Grootte van het icoontje */
+    color: #000; /* Kleur van het icoontje */
+    text-decoration: none;
+}
+
+.home-icon:hover {
+    color: #007bff; /* Kleur bij hover */
+}
