--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,17 @@ p {
 .home-icon:hover {
     color: #007bff; /* Kleur bij hover */
 }
+
+.btn {
+            background-color: #444;
+            border: none;
+            color: #black;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
