--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ p {
 /* Stijl voor de inhoud van het pop-up venster */
 .modal-content {
     background-color: #fff;
+    color: #000;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
