--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #007BFF;
     --secondary-color: #0056b3;
-    --bg-color: #1e1e1e;
+    --bg-color: #4a4a4a;
     --text-color: #f4f4f4;
     --button-color: #333;
     --button-hover-color: #444;
