--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ p {
     left: 50%;
     transform: translateX(-50%);
     background-color: rgba(204, 204, 204, 0.8);
-    color: white;
+    color: black;
     border: none;
     padding: 5px 10px;
     font-size: 12px;
