--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,19 @@ body {
     padding: 50px;
     margin: 0;
     color: var(--text-color);
+    text-shadow:
+        -2px -2px 0 #000,
+         2px -2px 0 #000,
+        -2px  2px 0 #000,
+         2px  2px 0 #000;
+    background-image: url('bg2.jpg');
+    background-size: cover; /* This will make the image cover the entire background */
+    background-position: center; /* This will center the image */
+    background-repeat: no-repeat; /* This prevents the image from repeating */
+    background-attachment: fixed; /* Makes the background stay fixed when scrolling */
+    height: 100vh; /* Ensures the body covers the entire height of the viewport */
+    min-height: 100vh;
+    margin: 0; /* Removes any default margin that might affect the body size */
 }
 
 h1 {
@@ -42,6 +55,7 @@ p {
 
 .link-list a {
     text-decoration: none;
+    text-shadow: none;
     color: var(--text-color);
     background-color: var(--button-color);
     padding: 12px 20px; /* Iets kleinere padding voor compactheid */
@@ -134,6 +148,8 @@ p {
     padding: 20px;
     border: 1px solid #888;
     width: 80%; /* Je kunt deze breedte aanpassen naar wens */
+    text-shadow: none;
+
 }
 
 /* Stijl voor de sluitknop (x) */
@@ -158,6 +174,7 @@ p {
     left: 50%;
     transform: translateX(-50%);
     background-color: rgba(204, 204, 204, 0.8);
+    text-shadow: none;
     color: black;
     border: none;
     padding: 5px 10px;
