--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,13 @@ body {
     text-align: center;
     padding: 50px;
     margin: 0;
+    font-size: 1.2rem;
     color: var(--text-color);
     text-shadow:
-        -2px -2px 0 #000,
-         2px -2px 0 #000,
-        -2px  2px 0 #000,
-         2px  2px 0 #000;
+        -1px -1px 0 #000,
+         1px -1px 0 #000,
+        -1px  1px 0 #000,
+         1px  1px 0 #000;
     background-image: url('bg2.jpg');
     background-size: cover; /* This will make the image cover the entire background */
     background-position: center; /* This will center the image */
