--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ input {
     border-radius: 5px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); 
     outline: none;
-    background-color: #99957a;
+    background-color: #e8de9b;
 }
 
 input:focus {
@@ -207,7 +207,7 @@ input:focus {
 select {
     border: 2px solid #F5DF4D;
     border-radius: 5px;
-    background-color: #99957a;
+    background-color: #e8de9b;
 }
 
 select:focus {
