--- a/styles.css
+++ b/styles.css
@@ -190,53 +190,27 @@ p {
     opacity: 1; /* Oplichten bij hover */
 }
 
-/* input veld */
-input {
+/* Styling voor tekstgerelateerde invoervelden */
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="number"] {
     border: 2px solid #F5DF4D;
     border-radius: 8px;
     box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.1); 
     outline: none;
     background-color: #d9d2a3;
     text-align: center;
-    font-size: 1.05em; /* Increase font size */
-    padding: 4px; /* Add padding for easier touch interaction */
-    width: 80%; /* Adjust width as needed to fit within the container */
-    max-width: 400px; /* Optional: Set a maximum width for larger screens */
+    font-size: 1.05em;
+    padding: 4px;
+    width: 80%;
+    max-width: 400px;
     box-sizing: border-box;
 }
 
-input:focus {
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="number"]:focus {
     border-color: #b8a739;
-}
-
-/* dropdown menu */
-select {
-    border: 2px solid #F5DF4D;
-    border-radius: 8px;
-    background-color: #d9d2a3;
-    font-size: 1.05em; /* Increase font size */
-    padding: 4px; /* Add padding for easier touch interaction */
-    width: 80%; /* Adjust width as needed to fit within the container */
-    max-width: 400px; /* Optional: Set a maximum width for larger screens */
-    box-sizing: border-box;
-    margin: 5px 0;
-}
-
-select:focus {
-    border-color: #b8a739; /* Donkerdere rand bij focus */
-}
-
-/* Remove extra margin or padding around the radio buttons and checkboxes */
-input[type="radio"],
-input[type="checkbox"] {
-    margin: 0; /* Remove default margin */
-    padding: 0; /* Remove default padding */
-    vertical-align: middle; /* Align the radio buttons/checkboxes with the label text */
-}
-
-/* Add a small margin between the button/checkbox and the label for better readability */
-input[type="radio"] + label,
-input[type="checkbox"] + label {
-    margin-left: 5px; /* Adjust this value to control the space between the button and label */
-    vertical-align: middle; /* Ensure the label aligns nicely with the input */
 }
