--- a/styles.css
+++ b/styles.css
@@ -214,3 +214,17 @@ input[type="email"]:focus,
 input[type="number"]:focus {
     border-color: #b8a739;
 }
+
+select {
+    border: 2px solid #F5DF4D;
+    border-radius: 8px;
+    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.1); 
+    outline: none;
+    background-color: #d9d2a3;
+    text-align: center;
+    font-size: 1.05em;
+    padding: 4px;
+    width: 80%;
+    max-width: 400px;
+    box-sizing: border-box;
+}
