--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,7 @@ input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
 input[type="number"]:focus {
-    border-color: #b8a739;
+    border-color: #fffab3;
 }
 
 select {
@@ -229,3 +229,8 @@ select {
     max-width: 400px;
     box-sizing: border-box;
 }
+
+select: focus {
+    border-color: #fffab3;
+}
+
