--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,11 @@ input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
 input[type="number"]:focus {
-    border-color: #fffab3;
+    border-color: #051aff;
+}
+
+input:disabled {
+    background-color: #434544;
 }
 
 select {
@@ -231,6 +235,6 @@ select {
 }
 
 select: focus {
-    border-color: #fffab3;
+    border-color: #051aff;
 }
 
