--- a/styles.css
+++ b/styles.css
@@ -238,16 +238,36 @@ select: focus {
     border-color: #051aff;
 }
 
+/* Verberg standaard checkbox */
+input[type="checkbox"], input[type="radio"] {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: #f2da4e;
+  border: 4px solid #d6c145;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  position: relative;
+}
+
+/* Voor de checkbox */
 input[type="checkbox"] {
   border-radius: 4px;
-  width: 25px;
-  height: 25px;
 }
 
+/* Voor de radio */
 input[type="radio"] {
   border-radius: 50%;
-  width: 25px;
-  height: 25px;
 }
 
+/* Stijl voor aangevinkte checkbox */
+input[type="checkbox"]:checked {
+  background-color: #051aff;
+}
+
+/* Stijl voor aangevinkte radio */
+input[type="radio"]:checked {
+  background-color: #051aff;
+}
 
