--- a/styles.css
+++ b/styles.css
@@ -196,8 +196,8 @@ input[type="text"],
 input[type="password"],
 input[type="email"],
 input[type="number"] {
-    border: 2px solid #F5DF4D;
-    border-radius: 8px;
+    border: 4px solid #F5DF4D;
+    border-radius: 50%;
     box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.1); 
     outline: none;
     background-color: #d9d2a3;
