--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ input[type="password"],
 input[type="email"],
 input[type="number"] {
     border: 4px solid #F5DF4D;
-    border-radius: 50%;
+    border-radius: 10px;
     box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.1); 
     outline: none;
     background-color: #d9d2a3;
