--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
          1px -1px 0 #000,
         -1px  1px 0 #000,
          1px  1px 0 #000;
-    background-image: url('bg2.jpg');
+    background-image: url('bglight.png');
     background-size: cover; /* This will make the image cover the entire background */
     background-position: center; /* This will center the image */
     background-repeat: no-repeat; /* This prevents the image from repeating */
