--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ p {
     border: 1px solid #888;
     width: 80%; /* Je kunt deze breedte aanpassen naar wens */
     text-shadow: none;
-
+    font-size: 0.9rem;
 }
 
 /* Stijl voor de sluitknop (x) */
